package ar.edu.utn.ba.ddsi.smartlife.security_service_in_home.models.entities;

public enum GradoRiesgo {
    BAJO,
    MEDIO,
    ALTO
}
