package ar.edu.utn.ba.ddsi.smartlife.security_service_in_home.models.entities.datos;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class DatoRobo {
    private Double nivelDePresenciaHumana;
    private Double gradoDeConfiabilidad;
}
