package ar.edu.utn.ba.ddsi.smartlife.security_service.models.entities;

public enum EstadoHogar {
    SEGURO,
    EN_PELIGRO
}
